# Constraint-Theory

./: .gitignore  CONTRIBUTING.md  DEPLOY_INSTRUCTIONS.md  POLICY_CPU.toml  README.md  REPO_METADATA_TODO.md  SOUL.md  THEORETICAL_GUARANTEES.md  optimized_cohomology.py  worklog.md  wrangler.toml
.github/: PROJECT_BOARD.md
crates/: CHANGELOG.md  PERFORMANCE_ANALYSIS_SUMMARY.md  PERFORMANCE_REPORT_ROUND_8.md  QUICK_REFERENCE.md  RELEASE_NOTES_v1.0.0.md  ROUND_10_FINAL_REPORT.md  ROUND_8_COMPLETION_SUMMARY.md  ROUND_9_COMPLETION_SUMMARY.md  TUTORIAL_ROUND_8.md
crates/constraint-theory-core/: .cargoignore  CHANGELOG.md  Cargo.toml  OPTIMIZATION_ROADMAP.md  PROFILING_GUIDE.md  ROUND_10_COMPLETION_SUMMARY.md
crates/constraint-theory-core/examples/: bench.rs  bench_profiled.rs
crates/constraint-theory-core/src/: cohomology.rs  curvature.rs  gauge.rs  kdtree.rs  lib.rs  manifold.rs  percolation.rs  simd.rs  tile.rs
crates/gpu-simulation/: Cargo.toml  GPU_SIMULATION_SUMMARY.md  README.md
crates/gpu-simulation/benches/: gpu_simulation_benchmark.rs
crates/gpu-simulation/examples/: comprehensive_simulation.rs  simple_simulation.rs
crates/gpu-simulation/src/: architecture.rs  benchmark.rs  kernel.rs  lib.rs  memory.rs  prediction.rs  visualization.rs
docs/: README.md
papers/: INDEX.md  README.md
repo-split/: worklog.md
scripts/: enhanced_simulation.py  fix_cohomology.py  monte_carlo_validation.py  visualization_tools.py
web/: README.md  docs.html  index.html  wrangler.toml
web-simulator/: GEOMETRIC_PRIMITIVES_GUIDE.md  geometric-demo.html  package.json
(+66 files in other folders)
