[package]
name = "gpu-simulation"
version = "0.1.0"
edition = "2021"
description = "GPU simulation framework for constraint theory algorithms"
authors = ["SuperInstance Team"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rayon = "1.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "gpu_simulation_benchmark"
harness = false

[features]
default = []
visualization = []
